--- a/src/Components/NavBar/navbar.css
+++ b/src/Components/NavBar/navbar.css
@@ -1,33 +1,19 @@
-.nav {
-  justify-content: center;
-  height: 80px;
-  display: flex;
-  align-items: center;
-  margin: 30px 0 30px 0px;
-}
 
 .navbar {
-  align-items: center;
   justify-content: center;
   display: flex;
-  justify-content: space-around;
-}
+  padding: 30px 0 30px 0;
+  background-color: #E7E2E1;}
 
 .item-button {
   display: flex;
   align-items: center;
+
 }
 
 .item-button a {
-  font-size: 1.5em;
-  color: black;
-  justify-content: center;
-  padding: 7px 15px; 
-  display: flex;
-}
-
-.navbar li {
-  width: 190px;
-  text-align: center; 
-  justify-content: space-around;
+  font-size: 1.3rem;
+color:black;  padding: 7px 15px; 
+  text-decoration: none;
+  background-color: #E7E2E1;
 }
