--- a/src/index.css
+++ b/src/index.css
@@ -18,8 +18,6 @@ time, mark, audio, video {
     box-sizing: border-box;
     vertical-align: baseline;
     background-color: black;
-    color: white;
-
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
@@ -29,7 +27,7 @@ footer, header, hgroup, menu, nav, section {
 body {
     line-height: 1;
 }
-ol, ul {
+ol, ul, a {
     list-style: none;
 }
 blockquote, q {
