--- a/src/index.css
+++ b/src/index.css
@@ -19,17 +19,23 @@ time, mark, audio, video {
     vertical-align: baseline;
     background-color: black;
 }
-/* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section {
     display: block;
 }
 body {
     line-height: 1;
-}
-ol, ul, a {
+    margin: 0px auto;
+  
+  }
+  a,
+  ol,
+  ul 
+  li{
     list-style: none;
-}
+    list-style-type: none;
+    color: black;
+  }
 blockquote, q {
     quotes: none;
 }
