--- a/src/Components/Footer/footer.css
+++ b/src/Components/Footer/footer.css
@@ -1,7 +1,15 @@
 footer {
-    padding-top: 30px;
-    width: 100%; height: 41%;
-    bottom: 0; left: 0; right: 0;
-  margin-top: 50px;
     font-size: 1em;
+    background-color: #E7E2E1;
+    height: 200px;
+  }
+  .footer-left{
+    background-color: #E7E2E1;
+    color: black
+
+  }
+  .footer-atelier-onirium {    background-color: #E7E2E1;
+    
+  }
+  .social-network-footer li{    background-color: #E7E2E1;
   }
