--- a/src/Components/Title/title.css
+++ b/src/Components/Title/title.css
@@ -4,7 +4,12 @@
   }
   
 
-.title {
+ .title {
+  background-color: #E7E2E1;
+
+} 
+
+.title h1{
   text-align: center;
   font-family: 'Love Light', cursive;
   font-weight:lighter;
@@ -14,4 +19,12 @@
   font-size: 7rem;
   height: 150px;
 
+
+}
+hr {
+  margin: 0 auto;
+  background-color: #640A02;
+  border: 0;
+  height: 4px;
+  width: 80%;
 }
