--- a/src/Components/Formulaires/contactInputForm.css
+++ b/src/Components/Formulaires/contactInputForm.css
@@ -1,24 +1,25 @@
-.contact-input-container {
-    padding-top: 20px;
-    border-bottom: 2px solid rgb(20, 20, 20);
-  margin-right: 40px;  justify-content: center;
-    
-  }
+
   
-  .contact-form-input {
+  .contact-form-input,   .contact-form-textarea {
     display: flex;
-    border: none;
     outline: none;
     width: 250px;
-    margin: 0 auto;
+    background-color: black;
+    height: 50px;
+    border-radius: 10px;
+    border-color: #AD8A3D;
+    box-sizing: border-box;
+    color: white;
+    gap:30px;
   }
   
   .contact-form-label {
-    color: gray;
+    color: white;
+    
   }
   
   .contact-button-form {
-    background-color: #ff7f50;
+    background-color: #640A02;
     height: 30px;
     width: 120px;
     border-radius: 10px;
@@ -32,3 +33,8 @@
     justify-content: center;
   }
   
+  
+  .contact-form-input::placeholder,
+  .contact-form-textarea::placeholder {
+    color: white;
+  }
