--- a/src/Pages/Contact/contact.css
+++ b/src/Pages/Contact/contact.css
@@ -11,6 +11,7 @@
     text-align: center;
     font-family: 'Lovers Quarrel', cursive;
     font-weight: lighter;
+    padding-top: 50px;
 }
 
 .article-contact{
