--- a/src/Components/Footer/footer.css
+++ b/src/Components/Footer/footer.css
@@ -26,8 +26,7 @@ footer {
   flex-direction: column;
   align-items: center;
   background-color: #E7E2E1;
-
-
+  align-items: center;
 }
 
 .social-network-footer {
