--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,17 @@
+@font-face {
+    font-family: 'Love';
+    src: url('/public/Fonts/LoveLight-Regular.ttf') format('truetype');
+  }
+@font-face {
+    font-family: 'Lovers';
+    src: url('/public/Fonts/LoversQuarrel-Regular.ttf') format('truetype');
+  }
+
+  @font-face {
+    font-family: 'Gowun';
+    src: url('/public/Fonts/GowunBatang-Regular.ttf') format('truetype');
+  }
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -36,7 +50,7 @@ body {
     color: black;
     text-decoration: none;
     font-size: 1.1em;
-
+    font-family: 'Gowun';
   }
 blockquote, q {
     quotes: none;
@@ -53,5 +67,11 @@ table {
 
 p{
     font-size: 1.1em;
-    /* line-height: 1.5; */
-}
+font-family: 'Gowun';}
+
+h1{font-family: 'Love';
+font-weight: lighter;}
+
+h2{font-family: 'Lovers';
+font-weight: lighter;}
+
