--- a/src/Components/Footer/footer.css
+++ b/src/Components/Footer/footer.css
@@ -8,17 +8,13 @@ footer {
   padding: 20px 0;
   width: 100%;
   height: 200px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
 .footer-container {
   display: flex;
   justify-content: space-around;
-  width: 100%;
   background-color: #E7E2E1;
-
+align-items: center;
 }
 
 .footer-column {
@@ -26,7 +22,6 @@ footer {
   flex-direction: column;
   align-items: center;
   background-color: #E7E2E1;
-  align-items: center;
 }
 
 .social-network-footer {
@@ -52,8 +47,23 @@ footer {
   font-size: 4rem;
 }
 
-footer ul, footer li, footer a, footer img, footer .h2-footer {
+footer ul, footer li, footer a, footer img, footer .h2-footer{
   background-color: #E7E2E1;
   text-align: center;
   text-decoration: none;
+}
+
+.copyright-container {
+  background-color: #E7E2E1;
+
+}
+
+.p-copyright {
+  background-color: #E7E2E1;
+  padding-bottom: 20px;
+}
+.p-copyright {
+  background-color: #E7E2E1;
+  text-align: center;
+  font-weight: bolder;
 }
