--- a/src/Components/NavBar/navbar.css
+++ b/src/Components/NavBar/navbar.css
@@ -23,3 +23,17 @@
   font-weight: lighter;
   padding: 0 40px 0 40px;
 }
+/* Styles pour les petits smartphones */
+@media only screen and (max-width: 480px) {
+
+  
+  }
+
+@media only screen and (min-width: 481px) and (max-width: 900px) {
+
+   
+}
+@media only screen and (min-width: 769px) and (max-width: 1024px) {
+  /* Styles pour les tablettes */
+
+}
