--- a/src/Components/Title/title.css
+++ b/src/Components/Title/title.css
@@ -16,3 +16,32 @@ hr {
   height: 4px;
   width: 80%;
 }
+/* Styles pour les petits smartphones */
+@media only screen and (max-width: 480px) {
+  .title h1 {
+  
+    font-size: 4rem;
+  
+    padding-top: 10px;
+  }
+  
+}
+
+@media only screen and (min-width: 481px) and (max-width: 900px) {
+  .title h1 {
+  
+    font-size: 4rem;
+  
+    padding-top: 10px;
+  }
+ 
+}
+@media only screen and (min-width: 769px) and (max-width: 1024px) {
+/* Styles pour les tablettes */
+.title h1 {
+  
+  font-size: 5rem;
+
+  padding-top: 10px;
+}
+}
