--- a/src/Components/NavBar/navbar.css
+++ b/src/Components/NavBar/navbar.css
@@ -23,6 +23,14 @@
   font-weight: lighter;
   padding: 0 40px 0 40px;
 }
+
+.icon {
+  width: 100px; /* Ajuste la taille selon tes besoins */
+  height: auto;
+  margin-left: 5px; /* Pour espacer l'icône du texte */
+}
+
+
 /* Styles pour les petits smartphones */
 @media only screen and (max-width: 480px) {
 
