--- a/src/Components/Banners/banners.css
+++ b/src/Components/Banners/banners.css
@@ -1,13 +1,11 @@
 .h2-banner {
-  position: absolute;
-  bottom: 50%;
-  left: 50%;
-  transform: translateX(-50% -50%);
-  text-align: center;
+  position: absolute; 
+  top: 80%; left: 50%;
+  transform: translate(-50%, -50%);
   background: transparent;
   color: white;
   font-weight: lighter;
-  font-size: 8rem;
+  font-size: 7rem;
 }
 
 .banner {
@@ -19,7 +17,6 @@
 
 .banner img {
   width: 100%;
-  height: 100%;
   object-fit: cover;
 
 }
@@ -28,22 +25,24 @@
 @media only screen and (max-width: 480px) {
   .banner {
     height: 400px; 
+
   }
 
   .h2-banner {
-    font-size: 3rem;
-    bottom: 50%;
-  }
+    font-size: 3rem; 
+  top:40% }
 }
 
 /* Styles pour les smartphones et petites tablettes */
 @media only screen and (min-width: 481px) and (max-width: 900px) {
   .banner {
     height: 500px;
+    
   }
 
   .h2-banner {
     font-size: 5rem;
+    top:40%
   }
 }
 
