--- a/src/Components/Title/title.css
+++ b/src/Components/Title/title.css
@@ -1,21 +1,22 @@
 .title {
   background-color: #e7e2e1;
   display: flex;
-  justify-content: space-around; /* Séparer le titre à gauche et les icônes à droite */
+  justify-content: space-around; 
   align-items: center;
+  padding-top: 20px;
 }
 
 .icon-compte {
   display: flex;
   align-items: center;
   gap: 30px;
+  border: #2c6402 solid 7px;
 }
 
 .title h1 {
-  text-align: left;
   background-color: #e7e2e1;
   font-size: 7rem;
-  padding-left: 50px;
+  border: #2c6402 solid 7px;
 }
 
 hr {
@@ -29,13 +30,28 @@ hr {
 /* Styles pour les petits smartphones */
 @media only screen and (max-width: 480px) {
   .title {
-    padding-left: 10px;
-    padding-right: 10px; /* Ajouter un peu d'espace à droite */
+    justify-content: flex-start; /* Ajuste l'espacement entre le titre et les icônes */
+    padding: 0 10px; /* Réduit le padding pour éviter trop d'espace */
   }
 
   .title h1 {
     font-size: 2.5rem;
-    padding-left: 0; /* Supprimer le padding excessif sur mobile */
+    max-width: 70%; /* Limite la largeur du titre */
+  }
+
+  .icon-compte {
+    gap: 5px;
+  }
+
+  .burger {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+  }
+
+  .icon {
+    width: 60px;
   }
 
   hr {
