--- a/src/Components/Title/title.css
+++ b/src/Components/Title/title.css
@@ -1,22 +1,21 @@
 .title {
   background-color: #e7e2e1;
   display: flex;
-  justify-content: space-around; 
+  justify-content: space-evenly; 
   align-items: center;
   padding-top: 20px;
+
 }
 
 .icon-compte {
   display: flex;
   align-items: center;
   gap: 30px;
-  border: #2c6402 solid 7px;
 }
 
 .title h1 {
   background-color: #e7e2e1;
   font-size: 7rem;
-  border: #2c6402 solid 7px;
 }
 
 hr {
@@ -30,35 +29,24 @@ hr {
 /* Styles pour les petits smartphones */
 @media only screen and (max-width: 480px) {
   .title {
-    justify-content: flex-start; /* Ajuste l'espacement entre le titre et les icônes */
-    padding: 0 10px; /* Réduit le padding pour éviter trop d'espace */
+    padding-left: 10px;
+    padding-right: 10px; 
   }
-
+.icon {
+  width: 60px;
+}
   .title h1 {
-    font-size: 2.5rem;
-    max-width: 70%; /* Limite la largeur du titre */
-  }
-
-  .icon-compte {
-    gap: 5px;
-  }
-
-  .burger {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
-  }
-
-  .icon {
-    width: 60px;
+    font-size: 2.7rem;
   }
 
   hr {
     display: none;
   }
 }
+.icon-compte {
 
+  gap: 15px;
+}
 /* Styles pour les tailles intermédiaires */
 @media only screen and (min-width: 481px) and (max-width: 900px) {
   .title h1 {
