--- a/src/index.css
+++ b/src/index.css
@@ -66,7 +66,8 @@ table {
 
 p{
     font-size: 1.1em;
-font-family: 'Gowun';}
+font-family: 'Gowun';
+color:aliceblue}
 
 h1{font-family: 'Love';
 font-weight: lighter;}
