--- a/src/Components/Title/title.css
+++ b/src/Components/Title/title.css
@@ -1,21 +1,14 @@
 .title {
-  background-color: #e7e2e1;
+ 
+ background-color: #e7e2e1;
   display: flex;
   justify-content: space-evenly; 
   align-items: center;
   padding-top: 20px;
-
 }
 
-.icon-compte {
-  display: flex;
-  align-items: center;
-  gap: 30px;
-}
-
-.title h1 {
-  background-color: #e7e2e1;
-  font-size: 7rem;
+.icon{
+  height: 80px;
 }
 
 hr {
@@ -25,6 +18,16 @@ hr {
   height: 4px;
   width: 80%;
 }
+.appbar {
+  background-color: #e7e2e1; 
+}
+
+.icon-compte {
+  display: flex;
+  list-style: none;
+  padding: 0;
+}
+
 
 /* Styles pour les petits smartphones */
 @media only screen and (max-width: 480px) {
