--- a/src/Components/NavBar/navbar.css
+++ b/src/Components/NavBar/navbar.css
@@ -1,25 +1,138 @@
-.app-bar {
-  background-color: #E7E2E1; /* Couleur de fond de la barre */
+@font-face {
+  font-family: "Alice";
+  src: url("/public/Fonts/Alice-Regular.ttf") format("truetype");
 }
 
-.toolbar {
+.navbar {
+  display: flex; /* Afficher la navbar par défaut sur les écrans larges */
+  justify-content: space-around;
+  background-color: #e7e2e1;
+  height: 100px; /* Ajustez la hauteur si nécessaire */
+  position: relative; /* Assurez-vous que la navbar est dans le flux normal */
+  z-index: 10; /* Assurez-vous que la navbar est au-dessus des autres éléments */
+}
+
+.item-navbar {
   display: flex;
-  justify-content: space-between; /* Espace entre le titre et le burger */
+  align-items: center;
+  background-color: #e7e2e1;
 }
 
-.burger-button {
+.item-navbar a {
+  font-size: 1.5rem;
   color: black;
-}
-
-.drawer-list {
-  width: 250px; /* Largeur du menu drawer */
-}
-
-.nav-link {
   text-decoration: none;
-  color: inherit; /* Pour que les liens conservent la couleur par défaut */
+  background-color: #e7e2e1;
+  font-family: "Alice", cursive;
+  font-weight: lighter;
 }
 
-.nav-link.active {
-  font-weight: bold; /* Mettre en surbrillance l'élément actif */
+.item-navbar li {
+  padding: 0 40px 0 40px;
+}
+.title-burger {
+  background-color: #e7e2e1;
+}
+
+/* Styles pour les petits smartphones */
+@media only screen and (max-width: 480px) {
+  .navbar {
+    display: none; /* Masquer la navbar par défaut sur mobile */
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .title-burger {
+    display: flex;
+    align-items: center;
+    background-color: #e7e2e1;
+  }
+
+  .navbar.active {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .item-navbar {
+    flex-direction: column;
+  }
+
+  /* Styles pour le menu burger */
+  .burger {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 30px;
+    height: 20px;
+    cursor: pointer;
+    margin-right: 20px;
+    margin-top: 15px;
+    z-index: 1000;
+  }
+
+  .burger div {
+    width: 100%;
+    height: 4px;
+    background-color: black;
+    transition: all 0.3s ease;
+  }
+
+  /* Transformation en croix lors de l'ouverture du menu */
+  .burger.open div:nth-child(1) {
+    transform: rotate(50deg);
+    position: relative;
+    top: 0;
+  }
+
+  .burger.open div:nth-child(2) {
+    opacity: 0; /* Cache la deuxième ligne */
+  }
+
+  .burger.open div:nth-child(3) {
+    transform: rotate(-50deg);
+    position: relative;
+    top: -16px;
+  }
+
+  /* Menu en plein écran */
+  .navbar.active {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: #e7e2e1;
+    z-index: 999;
+    position: fixed;
+    justify-content: flex-start;
+    padding-top: 100px;
+  }
+
+  /* Styles pour les liens du menu */
+  .item-navbar {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .item-navbar li {
+    margin: 20px;
+  }
+
+  .item-navbar a {
+    color: black;
+    font-size: 1.2rem;
+  }
+
+  /* Styles pour les tailles intermédiaires */
+@media only screen and (min-width: 481px) and (max-width: 900px) {
+  .item-navbar a {
+    font-size: 1rem;
+  }
+}
+
+@media only screen and (min-width: 769px) and (max-width: 1024px) {
+  .item-navbar a {
+    font-size: 1rem;
+    
+  }
+}
 }
