--- a/src/Components/Carrousel/HomePageCarrousel.css
+++ b/src/Components/Carrousel/HomePageCarrousel.css
@@ -1,8 +1,12 @@
-
-
-.swiper-pagination-horizontal.swiper-pagination-bullets .swiper-pagination-bullet {
-  background-color: #AD8A3D;
-}
-.swiper-pagination{
-  position:static !important;
-}
+.swiper-container {
+    width: 100%; /* Assurez-vous que le conteneur est large */
+    padding: 20px; /* Ajoutez du padding si nécessaire */
+  }
+  
+  .swiper-slide {
+    display: flex; /* Pour s'assurer que le contenu de chaque slide est centré */
+    justify-content: center; /* Centrer le contenu à l'intérieur des slides */
+    align-items: center; /* Centrer verticalement */
+    /* Ajoutez d'autres styles selon vos besoins */
+  }
+  
